use uv-build backend

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,7 @@ classifiers = [
     "Typing :: Typed",
     "Topic :: Software Development :: Libraries",
 ]
-dynamic = ["version"]
-packages = [
-    { include = "modern_pg" },
-]
+version = "0"
 dependencies = [
     "tenacity",
     "sqlalchemy[asyncio]",
@@ -44,11 +41,12 @@ dev-dependencies = [
 ]
 
 [build-system]
-requires = ["hatchling", "hatch-vcs"]
-build-backend = "hatchling.build"
+requires = ["uv_build"]
+build-backend = "uv_build"
 
-[tool.hatch.version]
-source = "vcs"
+[tool.uv.build-backend]
+module-name = "modern_pg"
+module-root = ""
 
 [tool.mypy]
 python_version = "3.10"
